welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:9: error: 'while' expected but 'if' found.
  if(biscuit > 2){
  ^Poucet:15: error: '(' expected but '}' found.
}
^